# MediaViewer

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CMakeUtils.cmake  Configuration.lua  Install.lua  MediaViewer.lua  MediaViewer.pro  Readme.md  config.lua  generate.bat  premake5.lua
MediaViewer/: MediaViewer.lua
MediaViewer/Resources/: Resources.qrc
MediaViewer/Sources/: Main.cpp  MediaViewerPCH.h
MediaViewer/Sources/ImageProviders/: FolderIconProvider.cpp  FolderIconProvider.h  ThumbnailProvider.cpp  ThumbnailProvider.h
MediaViewer/Sources/QML/: AnimatedImageViewer.qml  Browser.qml  FolderBrowser.qml  ImageViewer.qml  Main.qml  MediaBrowser.qml  MediaSelection.qml  MediaViewer.qml  MovieViewer.qml  QML.qrc  StateManager.qml  Viewer.qml  WindowSettings.qml  WindowState.qml  imports.qml
MediaViewer/Sources/Utils/: Cursor.h
MediaViewerLib/: MediaViewerLib.lua
MediaViewerLib/Sources/: MediaViewerLibPCH.cpp  MediaViewerLibPCH.h  MediaViewerLibPlugin.cpp  MediaViewerLibPlugin.h  qmldir
MediaViewerLib/Sources/Models/: Folder.cpp  Folder.h  FolderModel.cpp  FolderModel.h  Media.cpp  Media.h  MediaModel.cpp  MediaModel.h  MediaType.cpp  MediaType.h
MediaViewerLib/Sources/Utils/: Job.cpp  Job.h  Memory.cpp  Memory.h  Misc.cpp  Misc.h  Misc.inl
Resources/: MediaViewer.rc  Resources.qrc
Sources/: Main.cpp  MediaViewerPCH.cpp  MediaViewerPCH.h  RegisterQMLTypes.cpp  RegisterQMLTypes.h  qmldir
Sources/Application/: Application.qrc  FolderBrowser.qml  Main.qml  MainMenu.qml  MainWindow.qml  MediaBrowser.qml  MediaViewer.qml  Preferences.qml  Selection.qml  SlideShow.qml  StateManager.qml  WindowSettings.qml  imports.qml
Sources/Application/Components/: MenuItemEx.qml  ProgressBarEx.qml  ToolButtonEx.qml
Sources/Application/Previews/: AnimatedImage.qml
Sources/Application/Viewers/: Animated.qml  AnimatedImage.qml  Image.qml  Movie.qml  MovieControls.qml
Sources/ImageProviders/: FolderIconProvider.cpp  FolderIconProvider.h  ImageResponse.cpp  ImageResponse.h  MediaPreviewProvider.cpp  MediaPreviewProvider.h  ThumbnailProvider.cpp  ThumbnailProvider.h
Sources/Models/: Folder.cpp  Folder.h  Folder.inl  FolderModel.cpp  FolderModel.h  FolderModel.inl  Media.cpp  Media.h  Media.inl  MediaModel.cpp  MediaModel.h  MediaModel.inl
Sources/QML/: AnimatedImageViewer.qml  FolderBrowser.qml  ImageViewer.qml  Main.qml  MainMenu.qml  MainWindow.qml  MediaBrowser.qml  MediaSelection.qml  MediaViewer.qml  MovieViewer.qml  Preferences.qml  QML.qrc  Selection.qml  ShortcutMenuItem.qml  SlideShow.qml  StateManager.qml
Sources/QML/Previews/: Image.qml  Movie.qml
Sources/QML/Viewers/: Image.qml  Movie.qml
Sources/Utils/: Cursor.cpp  Cursor.h  FileSystem.cpp  FileSystem.h  Job.cpp  Job.h  Memory.cpp  Memory.h  Misc.cpp  Misc.h  Misc.inl
